--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
   "author": "kamiazya <yuki@kamiazya.tech>",
   "license": "MIT",
   "private": true,
+  "scripts": {
+    "start": "ts-node src/main.ts"
+  },
   "dependencies": {
     "@kubernetes/client-node": "^0.11.0"
   },
   "devDependencies": {
+    "ts-node": "^8.4.1",
     "typescript": "^3.6.4"
   }
 }
